[metadata]
name = SSST
author = Kyle Altendorf
author_email = sda@fstab.net
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =
    qtrio ~=0.3.0
    click ~=7.1
include_package_data = True
zip_safe = False
package_dir = =src
packages = find:

[options.extras_require]
pyqt5 =
    pyqt5 ~=5.15
    qtrio[pyqt5]
pyside2 =
    pyside2 ~=5.15
    qtrio[pyside2]
both =
    %(pyqt5)s
    %(pyside2)s
alqtendpy =
    alqtendpy ~=0.1.1
check =
    %(test)s
    black ==20.8b1
    mypy ~=0.790.0
dev =
    %(both)s
    %(check)s
    %(docs)s
    %(test)s
    %(alqtendpy)s
    # version should be driven by compatibility with pyqt5 extra
    pyqt5-tools
    tox ~=3.20
docs =
    %(pyside2)s
    sphinx >=3.2.1
    sphinx-autodoc-typehints
    sphinx-qt-documentation >=0.3
    sphinx_rtd_theme
    sphinxcontrib-trio
    towncrier ==19.9.0rc1
test =
    %(both)s
    %(alqtendpy)s
    coverage ~=5.3
    pytest ~=6.2
    pytest-cov ~=2.10
    pytest-trio ~=0.7.0
    pytest-xvfb ~=2.0
all =
    %(check)s
    %(both)s
    %(dev)s
    %(test)s

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssst = ssst.cli:cli
pytest11 =
    ssst = ssst._tests.pytest_plugin
