[metadata]
name = SSST
author = Kyle Altendorf
author_email = sda@fstab.net
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =
    async_generator ~=1.10
    attrs ~=20.3.0
    click ~=7.1
    pymodbus @ https://github.com/altendky/pymodbus/archive/b0e72eb57fd943650ae97f4bb43481dbdb8be0fe.zip
    # git+ gets us the models submodule, as opposed to .zip
    pysunspec2 @ git+https://github.com/sunspec/pysunspec2@d6023c394fa717913849c1f6ad7cab3ab7456c47
    # TODO: Should not need to duplicate the QTrio version info down below.
    #       https://github.com/pypa/pip/issues/9437
    # >=0.4.1 for https://github.com/altendky/qtrio/pull/211
    qtrio ~=0.4.1
    typing-extensions ~=3.7
include_package_data = True
zip_safe = False
package_dir = =src
packages = find:

[options.extras_require]
pyqt5 =
    pyqt5 ~=5.15
    # TODO: Should not need to duplicate the QTrio version info from above.
    #       https://github.com/pypa/pip/issues/9437
    qtrio[pyqt5] ~=0.4.1
pyside2 =
    pyside2 ~=5.15
    # TODO: Should not need to duplicate the QTrio version info from above.
    #       https://github.com/pypa/pip/issues/9437
    qtrio[pyside2] ~=0.4.1
both =
    %(pyqt5)s
    %(pyside2)s
check =
    %(test)s
    black ==20.8b1
    mypy ~=0.790.0
dev =
    %(both)s
    %(check)s
    %(test)s
    # version should be driven by compatibility with pyqt5 extra
    pyqt5-tools
    tox ~=3.20
docs =
    %(pyqt5)s
    %(s_importlib_metadata)s
    sphinx ~=3.2
    sphinx-autodoc-typehints ~=1.11
    sphinx-qt-documentation >=0.3
    sphinx_rtd_theme ~=0.5.1
    sphinx-inline-tabs ~=2020.10.19b4
    sphinxcontrib-trio ~=1.1
    towncrier ==19.9.0rc1
test =
    %(both)s
    coverage ~=5.3
    %(s_importlib_metadata)s
    importlib_resources ~=4.1
    pytest ~=6.2
    pytest-cov ~=2.10
    pytest-trio ~=0.7.0
    pytest-xvfb ~=2.0
all =
    %(check)s
    %(both)s
    %(dev)s
    %(test)s
s_importlib_metadata =
    importlib_metadata ~=3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssst = ssst.cli:cli
pytest11 =
    ssst = ssst._tests.pytest_plugin
